--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -1,5 +1,6 @@
 name: ci-workflow
-on: [push]
+on: 
+  workflow_dispatch
 
 jobs:
   test_action_job:
@@ -27,6 +28,7 @@ jobs:
           INPUT_PARAMETERS: https://raw.githubusercontent.com/Azure/azure-quickstart-templates/master/quickstarts/microsoft.web/webapp-basic-linux/azuredeploy.parameters.json
           INPUT_DEPLOYMENTNAME: github-test-rg
           INPUT_DEPLOYMENTMODE: Complete
+          EXPECTED_TO: pass
         run: ts-node test/main.tests.ts
 
       - name: Management group scope test
@@ -37,6 +39,7 @@ jobs:
           INPUT_TEMPLATE: ./test/template.json
           INPUT_PARAMETERS: ./test/parameters.json
           INPUT_DEPLOYMENTNAME: github-test-mg
+          EXPECTED_TO: pass
         run: ts-node test/main.tests.ts
 
       - name: Subscription scope test
@@ -47,6 +50,7 @@ jobs:
           INPUT_TEMPLATE: https://raw.githubusercontent.com/Azure/azure-docs-json-samples/master/azure-resource-manager/emptyRG.json
           INPUT_PARAMETERS: rgName=demoResourceGroup rgLocation=centralus
           INPUT_DEPLOYMENTNAME: github-test-subs
+          EXPECTED_TO: pass
         run: ts-node test/main.tests.ts
 
       - name: Validate mode test
@@ -58,4 +62,5 @@ jobs:
           INPUT_PARAMETERS: https://raw.githubusercontent.com/Azure/azure-quickstart-templates/master/quickstarts/microsoft.web/webapp-basic-linux/azuredeploy.parameters.json
           INPUT_DEPLOYMENTNAME: github-test-rg
           INPUT_DEPLOYMENTMODE: Validate
+          EXPECTED_TO: pass
         run: ts-node test/main.tests.ts
