--- a/.github/workflows/ci-workflow.yml
+++ b/.github/workflows/ci-workflow.yml
@@ -30,6 +30,19 @@ jobs:
           INPUT_DEPLOYMENTMODE: Complete
           EXPECTED_TO: pass
         run: ts-node test/main.tests.ts
+      
+      - name: Resource group scope test - Negative
+        env:
+          INPUT_SCOPE: resourcegroup
+          INPUT_SUBSCRIPTIONID: ${{ secrets.SUBSCRIPTION_ID }}
+          INPUT_RESOURCEGROUPNAME: E2eTestResourceGroupForArmAction
+          INPUT_TEMPLATE: ./test/resourceGroup-Negative/template.json
+          INPUT_PARAMETERS: ./test/resourceGroup-Negative/parameters.json
+          INPUT_REGION: eastasia
+          INPUT_DEPLOYMENTNAME: github-test-rg
+          INPUT_DEPLOYMENTMODE: Complete
+          EXPECTED_TO: fail
+        run: ts-node test/main.tests.ts
 
       - name: Management group scope test
         env:
@@ -48,6 +61,17 @@ jobs:
           INPUT_SUBSCRIPTIONID: ${{ secrets.SUBSCRIPTION_ID }}
           INPUT_REGION: centralus
           INPUT_TEMPLATE: https://raw.githubusercontent.com/Azure/azure-docs-json-samples/master/azure-resource-manager/emptyRG.json
+          INPUT_PARAMETERS: rgName=demoResourceGroup rgLocation=centralus
+          INPUT_DEPLOYMENTNAME: github-test-subs
+          EXPECTED_TO: fail
+        run: ts-node test/main.tests.ts
+      
+      - name: Subscription scope test - Negative
+        env:
+          INPUT_SCOPE: subscription
+          INPUT_SUBSCRIPTIONID: ${{ secrets.SUBSCRIPTION_ID }}
+          INPUT_REGION: centralus
+          INPUT_TEMPLATE: ./test/subscription-Negative/template.json
           INPUT_PARAMETERS: rgName=demoResourceGroup rgLocation=centralus
           INPUT_DEPLOYMENTNAME: github-test-subs
           EXPECTED_TO: pass
